--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.10"
 
+[tool.poetry.dev-dependencies]
+pytest = "^6.2"
+pytest-cov = "^2.12"
+
 [tool.poetry.scripts]
 gendiff = "gendiff.scripts.gendiff:main"
 
