--- a/setup.cfg
+++ b/setup.cfg
@@ -21,3 +21,8 @@ multi_line_output = 3
 include_trailing_comma = true
 default_section = FIRSTPARTY
 line_length = 79
+
+[options]
+setup_requires =
+    Cython
+cython_ext_modules = True
