--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "hexlet-code"
 version = "0.1.0"
-description = ""
+description = "Hexlet project - Difference Calculator"
 authors = ["DanilMullakhmetov <danilmullakhmetov@gmail.com>"]
 readme = "README.md"
 packages = [
@@ -14,7 +14,7 @@ pyyaml = "^6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2"
-pytest-cov = "^2.12"
+pytest-cov = "^5.0.0"
 flake8 = "^3.9.2"
 
 [tool.poetry.scripts]
